Revision history for JSON-Any

{{$NEXT}}
    - mark this distribution as deprecated in metadata

1.38      2014-09-29 16:42:08Z
    - real fix to tests from 1.37

1.37      2014-09-29 16:29:44Z
    - fix tests to use a higher precedence operator, to avoid confusing newer
      Test::More::cmp_ok.

1.36      2014-08-26 05:54:35Z
    - many improvements to tests and their coverage
    - $ENV{JSON_ANY_CONFIG} can no longer override constructor arguments

1.35      2014-08-16 00:51:05Z
    - clarify deprecation status in documentation

1.34      2014-05-28 21:31:20Z
    - remove test dependency on Devel::StringInfo, which requires Moose
      (RT#96034)

1.33      2014-04-19 05:58:46Z
    - line numbers in shipped code are now almost the same (within 3) as the
      repository source, for easier debugging
    - Changes content once again included manually, rather than extracted
      directly from git! (there are release tests to ensure that the file is
      kept current.)
    - Improve error message when failing to find a suitable backend (RT#87751)
    - when no backend is available at install time, JSON::PP is used as the
      default prereq rather than JSON.pm (re RT#67967)
    - documentation updated to recommend JSON::MaybeXS instead of JSON.pm for
      new code

1.32   2013-11-07 15:56:33 +0000
    - include dep Test::Requires in dist.ini (wolfsage)

1.31   2013-11-06 21:46:52 +0000
    - test string escapes with JSON::PP (ilmari)
    - support added for JSON::XS version 3 (ilmari)
    - documentation notes added regarding incompatibility issues with
      JSON::XS 3.x and JSON.pm < 2.90
    - tests for more backends
    - fix the tests to properly exclude JSON::XS unless we are explicitly
      testing it

1.30    2013-06-15
    * Add support for Cpanel::JSON::XS and JSON::PP. Fixes RT#85424 & RT#67967. (perigrin)
    * Fix documentation bug RT#86065.

1.29    2011-06-07